tests/ui/all_variants_skipped.stderr
error: all enum variants are `#[quickcheck(skip)]`; `arbitrary` cannot pick a variant
 --> tests/ui/all_variants_skipped.rs:5:3
  |
5 | /   #[quickcheck(skip)]
6 | |   A,
7 | |   #[quickcheck(skip)]
8 | |   B,
  | |____^
